--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
-<html lang="en" data-theme="dark">
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Marc Wanjeru | Portfolio</title>
 
+  <!-- Inter font (optimized weights) -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
 
+  <!-- Font Awesome 6.5 (includes brands & solid icons) -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
 
   <style>
@@ -53,6 +55,9 @@
       background: var(--bg-body) url('desktop1.jpg') center / cover no-repeat fixed;
       color: var(--text);
       transition: background-color 0.5s ease;
+      display: flex;
+      flex-direction: column;
+      min-height: 100vh;
     }
 
     body::before {
@@ -63,7 +68,29 @@
       z-index: -1;
     }
 
-    /* Icon Nav – lighter blur, smaller footprint */
+    main {
+      flex: 1;
+      /* Placeholder – add your real content here later */
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      min-height: 60vh;
+      padding: 2rem;
+      text-align: center;
+    }
+
+    main h1 {
+      font-size: 3rem;
+      margin-bottom: 1rem;
+    }
+
+    main p {
+      font-size: 1.25rem;
+      max-width: 600px;
+      color: var(--text-sec);
+    }
+
+    /* Icon Nav */
     .icon-nav {
       position: fixed;
       inset-inline-start: 12px;
@@ -109,7 +136,7 @@
       transform: scale(1.06);
     }
 
-    /* Sidebar – optimized blur, forced layer, fast transition */
+    /* Sidebar */
     .sidebar {
       position: fixed;
       inset-inline-start: 84px;
@@ -142,19 +169,17 @@
       opacity: 1;
     }
 
-    /* Scrollbar hiding – cross-browser */
     .sidebar::-webkit-scrollbar { display: none; width: 0; background: transparent; }
     .sidebar { scrollbar-width: none; -ms-overflow-style: none; }
-
     .sidebar:not(.open) { visibility: hidden; }
 
-    /* Profile & Menu */
     .profile {
       display: flex;
       align-items: center;
       gap: 12px;
       margin-block-end: 28px;
     }
+
     .profile img {
       width: 48px;
       height: 48px;
@@ -162,6 +187,7 @@
       object-fit: cover;
       border: 2px solid var(--border);
     }
+
     .profile h4 { font-size: 14.5px; font-weight: 600; line-height: 1.3; }
     .profile span   { font-size: 12px; color: var(--text-sec); }
 
@@ -170,6 +196,7 @@
       flex-direction: column;
       gap: 4px;
     }
+
     .menu a {
       display: flex;
       align-items: center;
@@ -181,11 +208,11 @@
       font-size: 14.5px;
       transition: background 0.18s ease;
     }
+
     .menu a i { min-width: 18px; font-size: 1.2rem; }
     .menu a:hover,
     .menu a.active { background: rgba(255,255,255,0.09); }
 
-    /* Overlay */
     .overlay {
       position: fixed;
       inset: 0;
@@ -195,9 +222,162 @@
       transition: opacity 0.32s;
       z-index: 80;
     }
+
     .overlay.active { opacity: 1; pointer-events: auto; }
 
-    /* Mobile */
+    /* ── FOOTER ──────────────────────────────────────────────── */
+    footer {
+      background: #0f172a;
+      padding: 60px 5% 30px;
+      color: #e2e8f0;
+      margin-top: auto;
+    }
+
+    .footer-container {
+      max-width: 1400px;
+      margin: 0 auto;
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+      gap: 40px 30px;
+    }
+
+    .footer-logo h2 {
+      font-size: 1.9rem;
+      margin-bottom: 8px;
+      color: white;
+    }
+
+    .footer-logo p {
+      color: #94a3b8;
+      font-size: 0.95rem;
+      margin-bottom: 24px;
+    }
+
+    .footer-column h3 {
+      font-size: 1.15rem;
+      margin-bottom: 18px;
+      color: white;
+    }
+
+    .footer-column ul {
+      list-style: none;
+    }
+
+    .footer-column ul li {
+      margin-bottom: 10px;
+    }
+
+    .footer-column ul li a {
+      color: #94a3b8;
+      text-decoration: none;
+      font-size: 0.95rem;
+      transition: color 0.2s;
+    }
+
+    .footer-column ul li a:hover {
+      color: #3b82f6;
+    }
+
+    .subscribe {
+      margin-top: 20px;
+    }
+
+    .subscribe h4 {
+      font-size: 1.1rem;
+      margin-bottom: 12px;
+      color: white;
+    }
+
+    .email-group {
+      display: flex;
+      margin: 12px 0 18px;
+      max-width: 320px;
+    }
+
+    .email-group input {
+      flex: 1;
+      padding: 12px 16px;
+      border: 1px solid #334155;
+      border-radius: 6px 0 0 6px;
+      background: #1e293b;
+      color: white;
+      font-size: 0.95rem;
+    }
+
+    .email-group input::placeholder {
+      color: #64748b;
+    }
+
+    .email-group button {
+      padding: 0 20px;
+      background: #3b82f6;
+      color: white;
+      border: none;
+      border-radius: 0 6px 6px 0;
+      cursor: pointer;
+      font-weight: 500;
+      transition: background 0.2s;
+    }
+
+    .email-group button:hover {
+      background: #2563eb;
+    }
+
+    .contact-item {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      margin-bottom: 12px;
+      color: #94a3b8;
+      font-size: 0.95rem;
+    }
+
+    .social-icons {
+      margin-top: 20px;
+      display: flex;
+      gap: 16px;
+      flex-wrap: wrap;
+    }
+
+    .social-icons a {
+      width: 38px;
+      height: 38px;
+      background: #1e293b;
+      color: #94a3b8;
+      border-radius: 50%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 1.1rem;
+      transition: all 0.2s;
+      text-decoration: none;
+    }
+
+    .social-icons a:hover {
+      background: #3b82f6;
+      color: white;
+      transform: translateY(-2px);
+    }
+
+    .bottom-bar {
+      margin-top: 50px;
+      padding-top: 30px;
+      border-top: 1px solid #334155;
+      text-align: center;
+      color: #64748b;
+      font-size: 0.9rem;
+    }
+
+    .bottom-links a {
+      color: #94a3b8;
+      text-decoration: none;
+      margin: 0 12px;
+    }
+
+    .bottom-links a:hover {
+      color: #3b82f6;
+    }
+
     @media (max-width: 768px) {
       .icon-nav {
         inset-inline-start: 10px;
@@ -221,6 +401,7 @@
 
   <div class="overlay" id="overlay"></div>
 
+  <!-- Icon Navigation -->
   <nav class="icon-nav">
     <button id="toggle" aria-label="Toggle menu"><i class="fa-solid fa-bars"></i></button>
 
@@ -239,9 +420,10 @@
     <i class="fa-solid fa-envelope" data-section="contact"></i>
   </nav>
 
+  <!-- Slide-out Sidebar -->
   <aside class="sidebar" id="sidebar">
     <div class="profile">
-      <img src="https://i.pravatar.cc/100?u=marc" alt="Profile">
+      <img src="https://i.pravatar.cc/100?u=marc" alt="Marc Wanjeru">
       <div>
         <h4>Hello 👋<br>Marc Wanjeru</h4>
         <span>Portfolio Navigation</span>
@@ -260,8 +442,99 @@
     </nav>
   </aside>
 
+  <!-- Main Content (placeholder) -->
+  <main>
+    <div>
+      <h1>Welcome to My Portfolio</h1>
+      <p>I'm Marc Wanjeru from Kampala. Explore the navigation on the left to learn more about me.</p>
+    </div>
+  </main>
+
+  <!-- Footer -->
+  <footer>
+    <div class="footer-container">
+
+      <!-- Logo + Subscribe -->
+      <div class="footer-logo">
+        <h2>Marc Wanjeru</h2>
+        <p>Creative Developer & Designer</p>
+
+        <div class="subscribe">
+          <h4>Subscribe Now</h4>
+          <div class="email-group">
+            <input type="email" placeholder="Enter your Email" />
+            <button>Subscribe</button>
+          </div>
+        </div>
+      </div>
+
+      <!-- Information -->
+      <div class="footer-column">
+        <h3>Information</h3>
+        <ul>
+          <li><a href="#">About Us</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Testimonials</a></li>
+          <li><a href="#">Events</a></li>
+        </ul>
+      </div>
+
+      <!-- Helpful Links -->
+      <div class="footer-column">
+        <h3>Helpful Links</h3>
+        <ul>
+          <li><a href="#">Services</a></li>
+          <li><a href="#">Supports</a></li>
+          <li><a href="#">Terms & Condition</a></li>
+          <li><a href="#">Privacy Policy</a></li>
+        </ul>
+      </div>
+
+      <!-- Our Services -->
+      <div class="footer-column">
+        <h3>Our Services</h3>
+        <ul>
+          <li><a href="#">Web Development</a></li>
+          <li><a href="#">UI/UX Design</a></li>
+          <li><a href="#">Consulting</a></li>
+          <li><a href="#">Training</a></li>
+        </ul>
+      </div>
+
+      <!-- Contact Us + Social -->
+      <div class="footer-column">
+        <h3>Contact Us</h3>
+        <div class="contact-item">
+          <i class="fas fa-phone"></i>
+          <span>+256 700 123 456</span>
+        </div>
+        <div class="contact-item">
+          <i class="fas fa-envelope"></i>
+          <span>marc@wanjeru.dev</span>
+        </div>
+
+        <div class="social-icons">
+          <a href="https://wa.me/256700123456" target="_blank" title="WhatsApp"><i class="fab fa-whatsapp"></i></a>
+          <a href="#" title="Microsoft Teams"><i class="fab fa-microsoft"></i></a>
+          <a href="mailto:marc@wanjeru.dev" title="Email"><i class="fas fa-envelope"></i></a>
+          <a href="https://linkedin.com/in/marc-wanjeru" target="_blank" title="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+        </div>
+      </div>
+
+    </div>
+
+    <div class="bottom-bar">
+      <p>© 2026 Marc Wanjeru | All Rights Reserved</p>
+      <div class="bottom-links">
+        <a href="#">FAQ</a> •
+        <a href="#">Privacy</a> •
+        <a href="#">Terms & Condition</a>
+      </div>
+    </div>
+  </footer>
+
   <script>
-    // Theme
+    // Theme handling
     const html = document.documentElement;
     const themeToggle = document.getElementById('theme-toggle');
     const themeIcon = document.getElementById('theme-icon');
@@ -291,7 +564,6 @@
     toggle.onclick = () => sidebar.classList.contains('open') ? close() : open();
     overlay.onclick = close;
 
-    // Optional icon → active + open on mobile
     document.querySelectorAll('.icon-nav i[data-section]').forEach(el => {
       el.onclick = () => {
         document.querySelectorAll('.icon-nav i').forEach(i => i.classList.remove('active'));
