--- a/index.html
+++ b/index.html
@@ -43,16 +43,42 @@
       z-index: -2;
     }
 
-    /* ── Left vertical icon bar ─────────────────────────────────────── */
+    /* Hamburger toggle button */
+    #hamburger {
+      position: fixed;
+      top: 20px;
+      left: 20px;
+      z-index: 120;
+      width: 54px;
+      height: 54px;
+      background: var(--glass);
+      backdrop-filter: blur(16px);
+      border: 1px solid var(--border);
+      border-radius: 14px;
+      color: var(--text);
+      font-size: 1.5rem;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      cursor: pointer;
+      transition: all 0.25s ease;
+    }
+
+    #hamburger:hover {
+      background: var(--accent);
+      color: white;
+      transform: scale(1.06);
+    }
+
+    /* Vertical quick-access icons */
     .vertical-bar {
       position: fixed;
-      left: 16px;
+      left: 20px;
       top: 50%;
       transform: translateY(-50%);
       width: 68px;
       background: var(--glass);
       backdrop-filter: blur(16px);
-      -webkit-backdrop-filter: blur(16px);
       border: 1px solid var(--border);
       border-radius: 22px;
       padding: 16px 0;
@@ -87,21 +113,21 @@
       margin-top: auto;
     }
 
-    /* ── Slide-out sidebar ──────────────────────────────────────────── */
+    /* Slide-out sidebar */
     .slide-sidebar {
       position: fixed;
-      left: 92px;
+      left: 100px;
       top: 50%;
       transform: translateY(-50%) translateX(-120%);
-      width: 300px;
+      width: 320px;
       max-height: 88vh;
       background: var(--glass);
       backdrop-filter: blur(20px);
       border: 1px solid var(--border);
       border-radius: 22px;
-      padding: 32px 28px;
+      padding: 40px 32px;
       z-index: 90;
-      transition: transform 0.38s cubic-bezier(0.32, 0.72, 0, 1);
+      transition: transform 0.4s cubic-bezier(0.34, 1.56, 0.64, 1);
       overflow-y: auto;
       pointer-events: none;
       opacity: 0;
@@ -119,36 +145,36 @@
     .profile {
       display: flex;
       align-items: center;
-      gap: 14px;
-      margin-bottom: 36px;
+      gap: 16px;
+      margin-bottom: 40px;
     }
 
     .profile img {
-      width: 54px;
-      height: 54px;
+      width: 60px;
+      height: 60px;
       border-radius: 50%;
       border: 2px solid var(--border);
     }
 
     .profile h4 {
-      font-size: 1.15rem;
+      font-size: 1.25rem;
       font-weight: 600;
     }
 
     .profile span {
-      font-size: 0.92rem;
+      font-size: 0.95rem;
       color: var(--text-light);
     }
 
     .sidebar-links a {
       display: flex;
       align-items: center;
-      gap: 14px;
-      padding: 14px 18px;
+      gap: 16px;
+      padding: 16px 20px;
       border-radius: 12px;
       color: var(--text);
       text-decoration: none;
-      font-size: 1rem;
+      font-size: 1.05rem;
       transition: background 0.2s;
     }
 
@@ -157,7 +183,7 @@
       background: rgba(255,255,255,0.09);
     }
 
-    /* ── Main content / Hero ────────────────────────────────────────── */
+    /* Hero */
     .hero {
       min-height: 100dvh;
       display: flex;
@@ -175,7 +201,7 @@
       font-size: clamp(3.5rem, 9vw, 6.2rem);
       font-weight: 700;
       line-height: 1.05;
-      margin-bottom: 1.6rem;
+      margin-bottom: 1.8rem;
     }
 
     .hero .subtitle {
@@ -186,7 +212,7 @@
       line-height: 1.5;
     }
 
-    /* ── Footer ─────────────────────────────────────────────────────── */
+    /* Footer */
     footer {
       background: rgba(15, 23, 42, 0.9);
       backdrop-filter: blur(12px);
@@ -274,17 +300,21 @@
     }
 
     @media (max-width: 768px) {
-      .vertical-bar { left: 12px; width: 62px; }
+      .vertical-bar { left: 16px; width: 62px; }
       .bar-item { width: 44px; height: 44px; font-size: 1.25rem; }
-      .slide-sidebar { left: 84px; width: 84vw; max-width: 320px; }
-      .hero h1 { font-size: 3.6rem; }
-      footer { padding: 5rem 6% 4rem; }
+      .slide-sidebar { left: 90px; width: 84vw; max-width: 320px; }
+      #hamburger { left: 16px; top: 16px; }
     }
   </style>
 </head>
 <body>
 
-  <!-- Left vertical icon bar -->
+  <!-- Hamburger menu button -->
+  <button id="hamburger">
+    <i class="fa-solid fa-bars"></i>
+  </button>
+
+  <!-- Vertical quick icons -->
   <nav class="vertical-bar">
     <div class="bar-item active" title="Home"><i class="fa-solid fa-house"></i></div>
     <div class="bar-item" title="About"><i class="fa-solid fa-user"></i></div>
@@ -298,7 +328,7 @@
     <div class="bar-item" title="Contact"><i class="fa-solid fa-envelope"></i></div>
   </nav>
 
-  <!-- Slide-out detailed menu -->
+  <!-- Slide-out sidebar -->
   <aside class="slide-sidebar" id="slide-sidebar">
     <div class="profile">
       <img src="https://i.pravatar.cc/100?u=marc" alt="Marc Wanjeru">
@@ -319,7 +349,7 @@
     </div>
   </aside>
 
-  <!-- Hero / main landing content -->
+  <!-- Hero -->
   <main class="hero">
     <div class="hero-content">
       <h1>Welcome to My Portfolio</h1>
@@ -333,7 +363,6 @@
   <!-- Footer -->
   <footer>
     <div class="footer-grid">
-
       <div class="footer-brand">
         <h2>Marc Wanjeru</h2>
         <p>Creative Developer & Designer</p>
@@ -381,7 +410,6 @@
           <a href="mailto:marc@wanjeru.dev"><i class="fa-solid fa-envelope"></i></a>
         </div>
       </div>
-
     </div>
 
     <div class="copyright">
@@ -402,39 +430,34 @@
     }
 
     const saved = localStorage.getItem('theme');
-    if (saved) {
-      setTheme(saved);
-    } else {
-      setTheme(window.matchMedia('(prefers-color-scheme: dark)').matches ? 'dark' : 'light');
-    }
+    if (saved) setTheme(saved);
+    else setTheme(window.matchMedia('(prefers-color-scheme: dark)').matches ? 'dark' : 'light');
 
     themeToggle.addEventListener('click', () => {
       const current = html.getAttribute('data-theme') || 'dark';
       setTheme(current === 'dark' ? 'light' : 'dark');
     });
 
-    // Open / close slide sidebar
-    const barItems = document.querySelectorAll('.bar-item:not(.theme-toggle)');
-    const slideSidebar = document.getElementById('slide-sidebar');
+    // Hamburger menu toggle
+    const hamburger = document.getElementById('hamburger');
+    const sidebar = document.getElementById('slide-sidebar');
 
-    barItems.forEach(item => {
-      item.addEventListener('click', () => {
-        // Optional: highlight clicked icon
-        barItems.forEach(i => i.classList.remove('active'));
-        item.classList.add('active');
-
-        // Toggle sidebar (especially useful on mobile)
-        if (window.innerWidth <= 900) {
-          slideSidebar.classList.toggle('open');
-        }
-      });
+    hamburger.addEventListener('click', () => {
+      sidebar.classList.toggle('open');
     });
 
-    // Optional: close sidebar when clicking outside (mobile)
-    document.addEventListener('click', e => {
-      if (!slideSidebar.contains(e.target) && !e.target.closest('.vertical-bar')) {
-        slideSidebar.classList.remove('open');
+    // Close sidebar when clicking outside
+    document.addEventListener('click', function(e) {
+      if (!sidebar.contains(e.target) && !hamburger.contains(e.target)) {
+        sidebar.classList.remove('open');
       }
+    });
+
+    // Optional: close sidebar after clicking a link inside
+    document.querySelectorAll('.sidebar-links a').forEach(link => {
+      link.addEventListener('click', () => {
+        sidebar.classList.remove('open');
+      });
     });
   </script>
 </body>
