--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" />
 
   <style>
     :root {
@@ -21,11 +21,7 @@
       --border: rgba(255,255,255,0.07);
     }
 
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
+    * { margin:0; padding:0; box-sizing:border-box; }
 
     body {
       min-height: 100dvh;
@@ -39,95 +35,92 @@
       content: "";
       position: fixed;
       inset: 0;
-      background: linear-gradient(to bottom, rgba(0,0,0,0.4), rgba(0,0,0,0.65));
+      background: linear-gradient(to bottom, rgba(0,0,0,0.45), rgba(0,0,0,0.7));
       z-index: -2;
     }
 
-    /* Hamburger toggle button */
+    /* Hamburger button */
     #hamburger {
       position: fixed;
-      top: 20px;
-      left: 20px;
+      top: 18px;
+      left: 18px;
       z-index: 120;
-      width: 54px;
-      height: 54px;
+      width: 50px;
+      height: 50px;
       background: var(--glass);
       backdrop-filter: blur(16px);
       border: 1px solid var(--border);
-      border-radius: 14px;
+      border-radius: 12px;
       color: var(--text);
-      font-size: 1.5rem;
+      font-size: 1.4rem;
       display: flex;
       align-items: center;
       justify-content: center;
       cursor: pointer;
-      transition: all 0.25s ease;
+      transition: all 0.25s;
     }
 
     #hamburger:hover {
       background: var(--accent);
       color: white;
-      transform: scale(1.06);
     }
 
-    /* Vertical quick-access icons */
+    /* Vertical icon bar */
     .vertical-bar {
       position: fixed;
-      left: 20px;
+      left: 18px;
       top: 50%;
       transform: translateY(-50%);
-      width: 68px;
+      width: 66px;
       background: var(--glass);
       backdrop-filter: blur(16px);
       border: 1px solid var(--border);
-      border-radius: 22px;
-      padding: 16px 0;
+      border-radius: 20px;
+      padding: 14px 0;
       display: flex;
       flex-direction: column;
       align-items: center;
-      gap: 14px;
+      gap: 12px;
       z-index: 100;
     }
 
     .bar-item {
-      width: 46px;
-      height: 46px;
-      border-radius: 14px;
+      width: 44px;
+      height: 44px;
+      border-radius: 12px;
       background: rgba(255,255,255,0.06);
       color: var(--text);
-      font-size: 1.35rem;
+      font-size: 1.3rem;
       display: grid;
       place-items: center;
       cursor: pointer;
-      transition: all 0.22s ease;
+      transition: all 0.22s;
     }
 
     .bar-item:hover,
     .bar-item.active {
       background: var(--accent);
       color: white;
-      transform: scale(1.08);
+      transform: scale(1.07);
     }
 
-    .theme-toggle {
-      margin-top: auto;
-    }
+    .theme-toggle { margin-top: auto; }
 
     /* Slide-out sidebar */
     .slide-sidebar {
       position: fixed;
-      left: 100px;
+      left: 96px;
       top: 50%;
       transform: translateY(-50%) translateX(-120%);
-      width: 320px;
-      max-height: 88vh;
+      width: 310px;
+      max-height: 86vh;
       background: var(--glass);
       backdrop-filter: blur(20px);
       border: 1px solid var(--border);
-      border-radius: 22px;
-      padding: 40px 32px;
+      border-radius: 20px;
+      padding: 36px 28px;
       z-index: 90;
-      transition: transform 0.4s cubic-bezier(0.34, 1.56, 0.64, 1);
+      transition: transform 0.38s cubic-bezier(0.32, 0.72, 0, 1);
       overflow-y: auto;
       pointer-events: none;
       opacity: 0;
@@ -145,43 +138,34 @@
     .profile {
       display: flex;
       align-items: center;
-      gap: 16px;
-      margin-bottom: 40px;
+      gap: 14px;
+      margin-bottom: 32px;
     }
 
     .profile img {
-      width: 60px;
-      height: 60px;
+      width: 56px;
+      height: 56px;
       border-radius: 50%;
       border: 2px solid var(--border);
     }
 
-    .profile h4 {
-      font-size: 1.25rem;
-      font-weight: 600;
-    }
-
-    .profile span {
-      font-size: 0.95rem;
-      color: var(--text-light);
-    }
+    .profile h4 { font-size: 1.18rem; font-weight: 600; }
+    .profile span  { font-size: 0.93rem; color: var(--text-light); }
 
     .sidebar-links a {
       display: flex;
       align-items: center;
-      gap: 16px;
-      padding: 16px 20px;
+      gap: 14px;
+      padding: 14px 18px;
       border-radius: 12px;
       color: var(--text);
       text-decoration: none;
-      font-size: 1.05rem;
+      font-size: 1.02rem;
       transition: background 0.2s;
     }
 
     .sidebar-links a:hover,
-    .sidebar-links a.active {
-      background: rgba(255,255,255,0.09);
-    }
+    .sidebar-links a.active { background: rgba(255,255,255,0.09); }
 
     /* Hero */
     .hero {
@@ -193,51 +177,50 @@
       text-align: center;
     }
 
-    .hero-content {
-      max-width: 960px;
-    }
-
     .hero h1 {
-      font-size: clamp(3.5rem, 9vw, 6.2rem);
+      font-size: clamp(3.4rem, 8.5vw, 5.8rem);
       font-weight: 700;
       line-height: 1.05;
-      margin-bottom: 1.8rem;
+      margin-bottom: 1.6rem;
     }
 
     .hero .subtitle {
-      font-size: clamp(1.25rem, 3.5vw, 1.55rem);
+      font-size: clamp(1.2rem, 3.2vw, 1.45rem);
       color: var(--text-light);
-      max-width: 760px;
-      margin: 0 auto 3rem;
-      line-height: 1.5;
+      max-width: 720px;
+      margin: 0 auto;
+      line-height: 1.55;
     }
 
-    /* Footer */
+    /* ── Slim & compact footer ──────────────────────────────────────── */
     footer {
-      background: rgba(15, 23, 42, 0.9);
-      backdrop-filter: blur(12px);
-      padding: 6rem 6% 4rem;
+      background: rgba(15,23,42,0.92);
+      backdrop-filter: blur(10px);
+      padding: 3.5rem 5% 2.5rem;
+      font-size: 0.96rem;
       color: var(--text-light);
     }
 
     .footer-grid {
-      max-width: 1400px;
+      max-width: 1280px;
       margin: 0 auto;
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-      gap: 3.5rem 2.5rem;
+      grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+      gap: 2.5rem 2rem;
+      justify-items: center;
+      text-align: center;
     }
 
     .footer-brand h2 {
-      font-size: 1.9rem;
+      font-size: 1.6rem;
       color: white;
-      margin-bottom: 0.8rem;
+      margin-bottom: 0.6rem;
     }
 
     .footer-column h3 {
       color: white;
-      font-size: 1.15rem;
-      margin-bottom: 1.3rem;
+      font-size: 1.05rem;
+      margin-bottom: 1rem;
     }
 
     .footer-column ul {
@@ -245,42 +228,46 @@
     }
 
     .footer-column ul li {
-      margin-bottom: 0.9rem;
+      margin-bottom: 0.6rem;
     }
 
     .footer-column a {
       color: var(--text-light);
       text-decoration: none;
-      transition: color 0.2s;
     }
 
     .footer-column a:hover {
       color: var(--accent);
     }
 
+    .contact-centered {
+      max-width: 260px;
+    }
+
     .contact-line {
       display: flex;
       align-items: center;
-      gap: 0.9rem;
-      margin-bottom: 1rem;
-      font-size: 0.98rem;
+      justify-content: center;
+      gap: 0.8rem;
+      margin-bottom: 0.7rem;
     }
 
     .social-icons {
       display: flex;
-      gap: 1.1rem;
-      margin-top: 1.8rem;
+      justify-content: center;
+      gap: 1rem;
+      margin-top: 1.4rem;
     }
 
     .social-icons a {
-      width: 44px;
-      height: 44px;
+      width: 40px;
+      height: 40px;
       border-radius: 50%;
       background: rgba(255,255,255,0.06);
       color: var(--text-light);
       display: grid;
       place-items: center;
-      font-size: 1.25rem;
+      font-size: 1.15rem;
       transition: all 0.25s;
     }
 
@@ -292,29 +279,30 @@
 
     .copyright {
       text-align: center;
-      margin-top: 5rem;
-      padding-top: 2.5rem;
-      border-top: 1px solid rgba(255,255,255,0.07);
+      margin-top: 3rem;
+      padding-top: 1.8rem;
+      border-top: 1px solid rgba(255,255,255,0.06);
       color: #64748b;
-      font-size: 0.92rem;
+      font-size: 0.88rem;
     }
 
     @media (max-width: 768px) {
-      .vertical-bar { left: 16px; width: 62px; }
-      .bar-item { width: 44px; height: 44px; font-size: 1.25rem; }
-      .slide-sidebar { left: 90px; width: 84vw; max-width: 320px; }
-      #hamburger { left: 16px; top: 16px; }
+      .vertical-bar { left: 14px; width: 60px; }
+      .bar-item { width: 42px; height: 42px; font-size: 1.2rem; }
+      .slide-sidebar { left: 86px; width: 82vw; max-width: 310px; }
+      #hamburger { left: 14px; top: 14px; width: 48px; height: 48px; font-size: 1.35rem; }
+      footer { padding: 3rem 5% 2.5rem; }
     }
   </style>
 </head>
 <body>
 
-  <!-- Hamburger menu button -->
+  <!-- Hamburger -->
   <button id="hamburger">
     <i class="fa-solid fa-bars"></i>
   </button>
 
-  <!-- Vertical quick icons -->
+  <!-- Vertical icons -->
   <nav class="vertical-bar">
     <div class="bar-item active" title="Home"><i class="fa-solid fa-house"></i></div>
     <div class="bar-item" title="About"><i class="fa-solid fa-user"></i></div>
@@ -360,9 +348,10 @@
     </div>
   </main>
 
-  <!-- Footer -->
+  <!-- Slim centered footer -->
   <footer>
     <div class="footer-grid">
+
       <div class="footer-brand">
         <h2>Marc Wanjeru</h2>
         <p>Creative Developer & Designer</p>
@@ -376,6 +365,20 @@
           <li><a href="#">Testimonials</a></li>
           <li><a href="#">Events</a></li>
         </ul>
+      </div>
+
+      <div class="footer-column contact-centered">
+        <h3>Contact Us</h3>
+        <div class="contact-line"><i class="fa-solid fa-phone-volume"></i> +256 700 123 456</div>
+        <div class="contact-line"><i class="fa-solid fa-envelope"></i> marc@wanjeru.dev</div>
+
+        <div class="social-icons">
+          <a href="#" title="WhatsApp"><i class="fab fa-whatsapp"></i></a>
+          <a href="#" title="Microsoft Teams"><i class="fab fa-microsoft"></i></a>
+          <a href="mailto:marc@wanjeru.dev" title="Email"><i class="fa-solid fa-envelope"></i></a>
+          <a href="#" title="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+          <a href="#" title="GitHub"><i class="fab fa-github"></i></a>
+        </div>
       </div>
 
       <div class="footer-column">
@@ -398,18 +401,6 @@
         </ul>
       </div>
 
-      <div class="footer-column">
-        <h3>Contact</h3>
-        <div class="contact-line"><i class="fa-solid fa-phone-volume"></i> +256 700 123 456</div>
-        <div class="contact-line"><i class="fa-solid fa-envelope"></i> marc@wanjeru.dev</div>
-
-        <div class="social-icons">
-          <a href="#"><i class="fab fa-whatsapp"></i></a>
-          <a href="#"><i class="fab fa-linkedin-in"></i></a>
-          <a href="#"><i class="fab fa-github"></i></a>
-          <a href="mailto:marc@wanjeru.dev"><i class="fa-solid fa-envelope"></i></a>
-        </div>
-      </div>
     </div>
 
     <div class="copyright">
@@ -438,7 +429,7 @@
       setTheme(current === 'dark' ? 'light' : 'dark');
     });
 
-    // Hamburger menu toggle
+    // Hamburger ↔ sidebar
     const hamburger = document.getElementById('hamburger');
     const sidebar = document.getElementById('slide-sidebar');
 
@@ -446,18 +437,16 @@
       sidebar.classList.toggle('open');
     });
 
-    // Close sidebar when clicking outside
-    document.addEventListener('click', function(e) {
+    // Close when clicking outside
+    document.addEventListener('click', e => {
       if (!sidebar.contains(e.target) && !hamburger.contains(e.target)) {
         sidebar.classList.remove('open');
       }
     });
 
-    // Optional: close sidebar after clicking a link inside
-    document.querySelectorAll('.sidebar-links a').forEach(link => {
-      link.addEventListener('click', () => {
-        sidebar.classList.remove('open');
-      });
+    // Close after link click
+    document.querySelectorAll('.sidebar-links a').forEach(a => {
+      a.addEventListener('click', () => sidebar.classList.remove('open'));
     });
   </script>
 </body>
